Add a sample file that invokes a test server. Start work on an opinionated view of what the web view should look like Further Cleanup